--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
 Django>=2.1.3,<2.2.0 # install the one less than the newest
 djangorestframework>=3.9.0,<3.10.0 # install the one less than the newest
+
+flake9>=3.6.0,<3.7.0
